source/common/objects/c52_Device__c.object
<CustomObject>
    <description>The user&apos;s device</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The contact who uses the device</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>Devices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CordovaVersion__c</fullName>
        <description>The version of cordova being used on the device</description>
        <label>CordovaVersion</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <description>The device manufacturer (Apple, Samsung, Blackberry, etc.)</description>
        <label>Manufacturer</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>The device model being used</description>
        <label>Model</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <description>The platform or OS of the device being used (iOS, OSX, Windows, Android, etc)</description>
        <label>Platform</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <description>the universally unique identifier of the device being used</description>
        <label>UUID</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>The OS Version of the device</description>
        <label>Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Device</label>
    <nameField>
        <displayFormat>D-{0000000000}</displayFormat>
        <label>Device</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>